load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "generator",
    srcs = ["generator.go"],
    importpath = "github.com/guoming0000/protoc-gen-go-gin/cmd/protoc-gen-openapiv2/internal/generator",
    deps = ["//internal/descriptor"],
)

alias(
    name = "go_default_library",
    actual = ":generator",
    visibility = ["//:__subpackages__"],
)
